# CppLab

./: CMakeLists.txt  Library.cpp  LibraryTests.cpp  TestWin.cpp  main.cpp  matrixes.cpp  sorting.cpp  string_utils.cpp  text.txt  utilities.cpp
Lab1/: Lab1_1.cpp  Lab1_2.cpp  Lab1_3.cpp  Lab1_4.cpp
Lab10/: Lab10_1.cpp  Lab10_2.cpp  Lab10_3.cpp  Lab10_4.cpp
Lab11/: Lab11_1.cpp  Lab11_2.cpp  Lab11_3.cpp  Lab11_4.cpp  Lab11_5.cpp
Lab12/: Lab12_1.cpp  Lab12_2.cpp  Lab12_3.cpp  Lab12_4.cpp  a.txt  a1.txt  a2.txt  lowercase.txt  uppercase.txt
Lab13/: Lab13.cpp  students.txt
Lab14/: Lab14.cpp  Library14.cpp
Lab15/: Lab15.cpp  Library15.cpp
Lab16/: Lab16_1.cpp  Lab16_2.cpp  Library16_1.cpp  Library16_2.cpp
Lab2/: Lab2_1.cpp  Lab2_2.cpp  Lab2_3.cpp  Lab2_4.cpp
Lab3/: Lab3_1.cpp  Lab3_2.cpp  Lab3_3.cpp  Lab3_4.cpp
Lab4/: Lab4_1.cpp  Lab4_2.cpp  Lab4_3.cpp  Lab4_4.cpp
Lab5/: Lab5_1.cpp  Lab5_2.cpp  Lab5_3.cpp  Lab5_4.cpp
Lab6/: Lab6_1.cpp  Lab6_2_5.cpp  Lab6_3.cpp  Lab6_4.cpp
Lab7/: Lab7.cpp
Lab8/: Lab8_1.cpp  Lab8_2.cpp  Lab8_3.cpp  Lab8_4.cpp  Lab8_5.cpp
Lab9/: Lab9_1.cpp  Lab9_2.cpp  Lab9_3.cpp  Lab9_4.cpp  Lab9_5.cpp
a/: Lab.cpp
lib/docs/: gmock_cook_book.md
lib/googlemock/include/gmock/: gmock-matchers.h
lib/googletest/include/gtest/: gtest.h
lib/googletest/include/gtest/internal/: gtest-port.h
lib/googletest/src/: gtest-port.cc  gtest.cc
reversi/: includeAll.h  tempMain.cpp
reversi/engine/: ReversiEngine.cpp  ReversiEngine.h
reversi/engine/board/: Field.cpp  Field.h
reversi/engine/components/: Chip.cpp  Chip.h  GameListener.cpp  GameListener.h  Player.cpp  Player.h  Point.cpp  Point.h
reversi/engine/utils/: constants.h  game_exceptions.h  utilities.cpp  utilities.h
reversi/player/: AiPlayer.cpp  AiPlayer.h  HumanPlayer.cpp  HumanPlayer.h
reversi/realizations/: AiConsoleReversi.cpp  ConsoleReversi.cpp  ConsoleReversi.h  HumanConsoleReversi.cpp  ReversiAi.cpp  ReversiAi.h  TestConsoleReversi.cpp
reversi/realizations/ui/: WindowApp.cpp
reversi/realizations/ui/components/: Button.cpp  Button.h  ButtonFieldListener.h  ButtonFieldListenerImpl.cpp  ButtonFieldListenerImpl.h  ButtonsField.cpp  ButtonsField.h  ButtonsFieldListener.h  ChipButton.cpp  ChipButton.h  Clickable.h  Drawable.h  Label.cpp  Label.h  MultilineLabel.cpp  MultilineLabel.h  OnButtonListener.h  Palette.h  Pallete.cpp  RadioButtonGroup.cpp  RadioButtonGroup.h  View.cpp  View.h  Window.cpp  Window.h
